new infinite scroll

--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,9 +1,9 @@
 <div class="content-column">
   <div class="title">最新ルーム</div>
 </div>
-<div class="rooms">
+<div class="latest-rooms">
   <% @room_latest.each do |room| %>
-        <div class="room">
+        <div class="latest-room">
             <div class="room-bg-image">
                 <% if room.image.length > 0 || room.image != nil %>
                   <img src = "<%= room.image %>">
@@ -37,38 +37,96 @@
 <div class="content-column">
   <div class="title">ルーム一覧</div>
 </div>
-<div class="rooms">
-  <% @room_all.each do |room| %>
-        <div class="room"> 
-            <div class="room-bg-image">
-                <% if room.image.length > 0 || room.image != nil %>
-                  <img src = "<%= room.image %>">
-                <% else %>
-                  <img src = "/room_image/default.png">
-                <% end %>
-            </div>
-            <div class="room-image">
-              <% if room.image.length > 0 || room.image != nil %>
-                <img src = "<%= room.image %>" class="room-image">
-              <% else %>
-                <img src = "/room_image/default.png" class="room-image">
-              <% end %>
-            </div>
-            <div class="room-titles">
-              <div class="room-category-time">
-                <div class="room-category">
-                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
-                </div>
-                <div class="room-create-time"><%= date_format(room.created_at)%></div>
+<div class="rooms jscroll">
+  <div class="rooms-list">
+    <% @room_all.each do |room| %>
+          <div class="room"> 
+              <div class="room-bg-image">
+                  <% if room.image.length > 0 || room.image != nil %>
+                    <img src = "<%= room.image %>">
+                  <% else %>
+                    <img src = "/room_image/default.png">
+                  <% end %>
               </div>
-              <div class="title"><%= room.name %></div>
-            </div>
-            <div class="join-btn-area">
-              <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
-            </div>
-        </div>
-  <% end %>
+              <div class="room-image">
+                <% if room.image.length > 0 || room.image != nil %>
+                  <img src = "<%= room.image %>" class="room-image">
+                <% else %>
+                  <img src = "/room_image/default.png" class="room-image">
+                <% end %>
+              </div>
+              <div class="room-titles">
+                <div class="room-category-time">
+                  <div class="room-category">
+                    <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                  </div>
+                  <div class="room-create-time"><%= date_format(room.created_at)%></div>
+                </div>
+                <div class="title"><%= room.name %></div>
+              </div>
+              <div class="join-btn-area">
+                <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+              </div>
+          </div>
+    <% end %>
+    <div class="room_view">
+      <%= paginate @room_all, param_name: "room_page" %>
+    </div>
+    <div class="infinite-scroll">
+      <div class="cv-spinner">
+        <span class="spinner"></span>
+      </div>
+    </div>
+  </div>
 </div>
+
+<script type="text/javascript">
+  $(document).on('turbo:load', function() {
+  // document.addEventListener("turbo:load", () => {
+  var i = 2;
+  console.log($('.room'))
+    $(window).on('scroll', function() {
+      var scrollHeight = $(document).height();
+      var scrollPosition = $(window).height() + $(window).scrollTop();
+      // if ((scrollHeight - scrollPosition) / scrollHeight <= 0.05 && (i <= parseInt($(".room_view").find("nav.pagination span.last a").prop("search").match(/[0-9]/), 10))) {
+      if ($("nav.pagination a[rel=next]").length){
+          setTimeout(function(){
+            $('.jscroll').jscroll({
+              autoTrigger: true,
+              padding: 5,
+              // 無限に追加する要素は、どこに入れる？
+              contentSelector: '.rooms-list', 
+              // 次のページにいくためのリンクの場所は？ ＞aタグの指定
+              nextSelector: 'span.next:last a',
+              // 読み込み中の表示はどうする？
+              loadingHtml: $(".cv-spinner"),
+              // loadingHtml: function(){
+              //   $(".cv-spinner").removeClass("hide")
+              // },
+              //  loadingHtmlが描画された後に実行する JavaScript 関数。
+              // loadingFunction: function(){
+              //   $('.cv-spinner').addClass('hide')
+              // },
+
+              //  必要に応じて、一連のコンテンツが読み込まれた後に呼び出されるコールバック関数を定義
+              callback: function(){
+                $(".cv-spinner").addClass("hide")
+              //   console.log("コールバック")
+              //   $(".cv-spinner").addClass("hide")
+              //   // console.log("くるくるまえ" + i)
+              //   // $('.cv-spinner').addClass('hide');
+              //   i++;
+              //   // console.log("くるくるあと" + i)
+              },
+            })
+          },850)
+      }else{
+        console.log("else")
+        $(".cv-spinner").addClass("hide")
+      }
+    });
+  });
+</script>
 <script type="text/javascript">
 document.addEventListener("turbo:load", () => {
   $(function() {
