--- a/chatapp/app/views/home/index.html.erb
+++ b/chatapp/app/views/home/index.html.erb
@@ -1,10 +1,5 @@
 <br>
-<% if @current_user %>
-  <%= link_to "ログアウト", destroy_session_path, data: {turbo_method: :post} %>
-  <%= @current_user.name %>
-  <%= @current_user.email %>
-  <img src=<%= @current_user.image %>>
-<% else %>
+<% if !@current_user %>
   <%= link_to "ログインする", "/signin" %>
 <% end %>
 
