--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -1,9 +1,9 @@
 <div class="content-column">
   <div class="title">最新ルーム</div>
 </div>
-<div class="latest-rooms">
+<div class="rooms">
   <% @room_latest.each do |room| %>
-        <div class="latest-room">
+        <div class="room">
             <div class="room-bg-image">
                 <% if room.image.length > 0 || room.image != nil %>
                   <img src = "<%= room.image %>">
@@ -37,8 +37,8 @@
 <div class="content-column">
   <div class="title">ルーム一覧</div>
 </div>
-<div class="rooms jscroll">
-  <div class="rooms-list">
+<div class="jscroll">
+  <div class="rooms" id="inf">
     <% @room_all.each do |room| %>
           <div class="room"> 
               <div class="room-bg-image">
@@ -95,7 +95,7 @@
               autoTrigger: true,
               padding: 5,
               // 無限に追加する要素は、どこに入れる？
-              contentSelector: '.rooms-list', 
+              contentSelector: '#inf', 
               // 次のページにいくためのリンクの場所は？ ＞aタグの指定
               nextSelector: 'span.next:last a',
               // 読み込み中の表示はどうする？
