--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -72,58 +72,33 @@
     <div class="room_view">
       <%= paginate @room_all, param_name: "room_page" %>
     </div>
-    <div class="infinite-scroll">
-      <div class="cv-spinner">
-        <span class="spinner"></span>
-      </div>
-    </div>
   </div>
 </div>
 
 <script type="text/javascript">
   $(document).on('turbo:load', function() {
-  // document.addEventListener("turbo:load", () => {
   var i = 2;
+  var html= `<div class="infinite-scroll">
+              <div class="cv-spinner"> 
+                <span class="spinner"></span>
+              </div>
+            </div>`
+  var options = {
+      autoTrigger: true,
+      padding: 20,
+      loadingHtml: html,
+      nextSelector: 'span.next:last a',
+      contentSelector: '#inf',
+      pagingSelector: $(".room_view")
+  };
   console.log($('.room'))
     $(window).on('scroll', function() {
       var scrollHeight = $(document).height();
       var scrollPosition = $(window).height() + $(window).scrollTop();
-      // if ((scrollHeight - scrollPosition) / scrollHeight <= 0.05 && (i <= parseInt($(".room_view").find("nav.pagination span.last a").prop("search").match(/[0-9]/), 10))) {
       if ($("nav.pagination a[rel=next]").length){
           setTimeout(function(){
-            $('.jscroll').jscroll({
-              autoTrigger: true,
-              padding: 5,
-              // 無限に追加する要素は、どこに入れる？
-              contentSelector: '#inf', 
-              // 次のページにいくためのリンクの場所は？ ＞aタグの指定
-              nextSelector: 'span.next:last a',
-              // 読み込み中の表示はどうする？
-              loadingHtml: $(".cv-spinner"),
-              // loadingHtml: function(){
-              //   $(".cv-spinner").removeClass("hide")
-              // },
-              //  loadingHtmlが描画された後に実行する JavaScript 関数。
-              // loadingFunction: function(){
-              //   $('.cv-spinner').addClass('hide')
-              // },
-
-              //  必要に応じて、一連のコンテンツが読み込まれた後に呼び出されるコールバック関数を定義
-              callback: function(){
-                $(".cv-spinner").addClass("hide")
-              //   console.log("コールバック")
-              //   $(".cv-spinner").addClass("hide")
-              //   // console.log("くるくるまえ" + i)
-              //   // $('.cv-spinner').addClass('hide');
-              //   i++;
-              //   // console.log("くるくるあと" + i)
-              },
-              pagingSelector: $(".pagination")
-            })
+            $('.jscroll').jscroll(options)
           },850)
-      }else{
-        console.log("else")
-        $(".cv-spinner").addClass("hide")
       }
     });
   });
