--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -55,9 +55,12 @@
         </div>
         <div class="tab_content" id="tab3_content">
           <div class="tab_content_description">
-            <div class="edit_room_function">
-              <% if @room.admin == @current_user.id %>
-                <%= form_with url: update_room_path, model: @room, data: { turbo_frame: "_top" } do |f| %>
+            <input id="acd-check1" class="acd-check" type="checkbox">
+            <label class="acd-label" for="acd-check1">編集</label>
+            <div class="acd-content">
+              <div class="edit_room_function">
+                <% if @room.admin == @current_user.id %>
+                  <%= form_with url: update_room_path, model: @room, data: { turbo_frame: "_top" }  do |f| %>
                     <div id="errors-update-room"></div>
                     <%= f.label :category %>
                     <%= f.text_field :category %>
@@ -66,17 +69,19 @@
                     <%= f.label :image %><br>
                     <%= f.file_field :image %><br>
                     <%= f.label :describe %>
-                    <%= f.text_area :describe %>
+                    <%= f.text_area:describe %>
                     <%= f.submit "変更する" %>
-                <% end %>
-                <div class="modal-room-back">
-                  <div class="room-back-contents"> 
-                    <%= link_to "ルームを削除する", destroy_room_path(room.id), 
+                  <% end %>
+                  <div class="modal-room-back">
+                    <div class="room-back-contents"> 
+                      <%= link_to "ルームを削除する", destroy_room_path(room.id), 
                         data: {turbo_method: :delete, turbo_confirm: "削除しますか？"} %>
+                    </div>
                   </div>
-                </div>
-              <% end %>
+                <% end %>
+              </div>
             </div>
+            
             <div class="modal-room-back">
               <div class="room-back-contents"> 
                 <%= link_to "ルームから退室する", room_leave_path(room.id), 
