--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -32,69 +32,109 @@
     <p id="helper-text" style="color: red;"></p>
   </div>
 <% end %>
-
-<script type="text/javascript">
-  document.addEventListener("turbo:load", () => {
-    const input = document.querySelector("#message-sentence");
-    const button = document.querySelector("#message-submit");
-    const p = document.querySelector("#helper-text");
-    const chatRegex = /[^\s\R]/;
-    var textCount = 2000;
-
-    button.disabled = true;
-    input.addEventListener("keyup", () => {
-      var count1 = input.value.length
-      if(chatRegex.test(input.value)){
-        button.disabled = false;
-        $('.message-submit').css('opacity', '1.0');
-      }else{
-        button.disabled = true;
-        $('.message-submit').css('opacity', '0.2');
-      };
-
-      if(count1 >= textCount){
-        button.disabled = true;
-        $('.message-sentense-class:focus').css('box-shadow','0 0 0 4px rgba(234, 57, 33, 0.3)');
-      }else{
-        $('.message-sentense-class:focus').css('box-shadow','0 0 0 4px rgba(35, 167, 195, 0.3)');
-      };
-    });
-  });
-</script>
-<script type="text/javascript">
-  document.addEventListener("turbo:load", () => {
-    $(window).on('scroll', function (){
-      var elem = $('.message-one');
-        var elemOffset = elem.last().offset().top;
-        var scrollPos = $(window).scrollTop();
-        var wh = $(window).height();
-
-        if(scrollPos >= elemOffset - wh){
-          document.getElementById('message-notice').textContent = "";
-        }
-
-    });
-  });
-</script>
-
-<script type="text/javascript">
-  document.addEventListener("turbo:load", () => {
-    var msg = document.getElementById("messages")
-    setTimeout(function(){
-      window.scroll(0, msg.scrollHeight);
-    },1)
-    $("#messages").fadeIn();
-  });
-</script>
 </div>
 
-<script>
-  function messageFunc() {
-    if (!event.shiftKey && event.key == "Enter"){
-      if (event.key === "Enter" && !event.isComposing) {
-        document.getElementById('message-form').submit();
+<% if controller.controller_name == "room" && controller.action_name ==  "page" %>
+  <script>
+    document.addEventListener("turbo:load", () => {
+      const input = document.querySelector("#message-sentence");
+      const button = document.querySelector("#message-submit");
+      const p = document.querySelector("#helper-text");
+      const chatRegex = /[^\s\R]/;
+      let textCount = 2000;
+      
+      button.disabled = true;
+      input.addEventListener("keyup", () => {
+        let count1 = input.value.length
+        if(chatRegex.test(input.value)){
+          button.disabled = false;
+          $('.message-submit').css('opacity', '1.0');
+        }else{
+          button.disabled = true;
+          $('.message-submit').css('opacity', '0.2');
+        };
+        
+        if(count1 >= textCount){
+          button.disabled = true;
+          $('.message-sentense-class:focus').css('box-shadow','0 0 0 4px rgba(234, 57, 33, 0.3)');
+        }else{
+          $('.message-sentense-class:focus').css('box-shadow','0 0 0 4px rgba(35, 167, 195, 0.3)');
+        };
+      });
+    });
+  </script>
+  
+  <script>
+    document.addEventListener("turbo:load", () => {
+      $(window).on('scroll', function (){
+        let elem = $('.message-one');
+          let elemOffset = elem.last().offset().top;
+          let scrollPos = $(window).scrollTop();
+          let wh = $(window).height();
+          
+          if(scrollPos >= elemOffset - wh){
+            document.getElementById('message-notice').textContent = "";
+          }
+      });
+    });
+  </script>
+  
+  <script>
+    document.addEventListener("turbo:load", () => {
+      let msg = document.getElementById("messages");
+      setTimeout(function(){
+        window.scroll(0, msg.scrollHeight);
+      }, 1)
+      $("#messages").fadeIn();
+    });
+  </script>
+  
+  <script>
+    function messageFunc() {
+      if (!event.shiftKey && event.key == "Enter"){
+        if (event.key === "Enter" && !event.isComposing) {
+          document.getElementById('message-form').submit();
+        }
+        event.preventDefault();
       }
-      event.preventDefault();
     }
-  }
-</script>
+  </script>
+  
+  <script>
+    let i = 2;
+    document.addEventListener("turbo:load", () => {
+      Turbo.clearCache();
+      i = 2;
+      window.addEventListener("scroll", msgScroll);
+    });
+    
+    function msgScroll() {
+      //変数定義
+      let button = document.getElementById("more-messages");
+      let messages = document.getElementById("messages");
+      let prev = messages.scrollHeight;
+      let height;
+      let jqxhr;
+      
+      if (($(window).scrollTop() == 0) && (i <= parseInt($(".message_view").find("nav.pagination span.last a").prop("search").match(/[0-9]/), 10))) {
+        button.click();
+        
+        jqxhr = $.ajax({
+          url: $(".message_view").find("nav.pagination a[rel=next]").prop("search").replace(/[0-9]/, i),
+          beforeSend: function(){
+            $(".cv-spinner").removeClass("hide");
+          },
+          success: function(data){
+            setTimeout(function(){
+              $("#messages").prepend($(data).find("#messages").html());
+              height = messages.scrollHeight - prev;
+              $(window).scrollTop(height);
+              $(".cv-spinner").addClass("hide");
+            }, 850)
+          }
+        })
+        i++;
+      }
+    }
+  </script>
+<% end %>
