--- a/chatapp/app/views/room/page.html.erb
+++ b/chatapp/app/views/room/page.html.erb
@@ -37,6 +37,22 @@
 <% if controller.controller_name == "room" && controller.action_name ==  "page" %>
   <script>
     document.addEventListener("turbo:load", () => {
+      getMessageChild();
+    });
+    function getMessageChild() {
+      const pare_msg = document.getElementById("messages");
+      const last_msg = pare_msg.lastElementChild;
+      console.log(last_msg);
+      const rect = last_msg.getBoundingClientRect();
+      const isInView = 0 < rect.bottom && rect.top < window.innerHeight;
+      console.log(rect);
+      console.log(isInView);
+      return isInView;
+    }
+  </script>
+  
+  <script>
+    document.addEventListener("turbo:load", () => {
       const input = document.querySelector("#message-sentence");
       const button = document.querySelector("#message-submit");
       const p = document.querySelector("#helper-text");
