--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -519,7 +519,7 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
-  border: 1px solid #b6c3c6;
+  border: none;
   border-radius: 4px;
   color: inherit;
   font: inherit;
@@ -528,8 +528,8 @@
 }
 
 .message-sentense-class:focus {
-  box-shadow: 0 0 0 4px rgba(35, 167, 195, 0.3);
-  outline: 0;
+  outline: none;
+  border: none;
 }
 
 .modal-detail {
