write: menu dont select

--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -70,6 +70,7 @@ body{
       width:88%;
       cursor: pointer;
       cursor: hand;
+      user-select: none;
     }
     .menu-one:hover{
       background-color: #F4F4F4;
