--- a/chatapp/app/views/room/_new_room.html.erb
+++ b/chatapp/app/views/room/_new_room.html.erb
@@ -30,6 +30,7 @@
             </div>
         </div>
     </div>
+  <div class="background-shadow" id="js-black-sh2"></div>
 </div>
 
 <script type="text/javascript">
