--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -73,6 +73,12 @@
     flex-direction: column;
     position: relative;
     width: calc((100% - 8%) / 4);
+    @media screen and (max-width: 1200px) {
+      width: calc((100% - 8%) / 3);
+    }
+    @media screen and (max-width: 900px) {
+      width: calc((100% - 8%) / 2);
+    }
     margin: 0px 2% 40px 0;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
     background-color: #ffffff;
@@ -95,6 +101,7 @@
       .room-category-time {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
       }
       .room-category a {
         border: 1px solid #5ac29c;
@@ -122,6 +129,9 @@
       .title {
         font-size: 16px;
         color: #4b4b4b;
+        &:hover {
+          color: #468cd7;
+        }
       }
     }
     .join-btn-area {
@@ -146,15 +156,19 @@
     
     .room-image {
       position: absolute;
-      top: 26%;
-      left: 35%;
+      top: 18%;
+      left: 24%;
       z-index: 9;
+      width: 35%;
+      background-color: #d1d1d1;
       img {
-        width: 85px;
-        height: 85px;
+        width: 100%;
+        height: auto;
         object-fit: cover;
         overflow: hidden;
         border-radius: 50%;
+        //border: 4px solid #ffffff;
+        box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
       }
     }
   }
