--- a/chatapp/app/views/room/index.html.erb
+++ b/chatapp/app/views/room/index.html.erb
@@ -25,11 +25,60 @@
                 </div>
                 <div class="room-create-time"><%= date_format(room.created_at)%></div>
               </div>
-              <div class="title"><%= room.name %></div>
+              <%= link_to room_page_path(room.id) do %>
+                <div class="title"><%= room.name %></div>
+              <% end %>
             </div>
-            <div class="join-btn-area">
-              <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+              <div class="join-btn-area">
+                <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+              </div>
+            <% else %>
+            <br>
+            <% end %>
+        </div>
+  <% end %>
+</div>
+
+
+<div class="content-column">
+  <div class="title">活発なルーム</div>
+</div>
+<div class="rooms">
+  <% @room_update.each do |room| %>
+        <div class="room">
+            <div class="room-bg-image">
+                <% if room.image.length > 0 || room.image != nil %>
+                  <img src = "<%= room.image %>">
+                <% else %>
+                  <img src = "/room_image/default.png">
+                <% end %>
             </div>
+            <div class="room-image">
+              <% if room.image.length > 0 || room.image != nil %>
+                <img src = "<%= room.image %>" class="room-image">
+              <% else %>
+                <img src = "/room_image/default.png" class="room-image">
+              <% end %>
+            </div>
+            <div class="room-titles">
+              <div class="room-category-time">
+                <div class="room-category">
+                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                </div>
+                <div class="room-create-time"><%= date_format(room.created_at)%></div>
+              </div>
+              <%= link_to room_page_path(room.id) do %>
+                <div class="title"><%= room.name %></div>
+              <% end %>
+            </div>
+            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+              <div class="join-btn-area">
+                <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+              </div>
+            <% else %>
+            <br>
+            <% end %>
         </div>
   <% end %>
 </div>
@@ -61,11 +110,17 @@
                 </div>
                 <div class="room-create-time"><%= date_format(room.created_at)%></div>
               </div>
-              <div class="title"><%= room.name %></div>
+              <%= link_to room_page_path(room.id) do %>
+                <div class="title"><%= room.name %></div>
+              <% end %>
             </div>
-            <div class="join-btn-area">
-              <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
-            </div>
+            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+              <div class="join-btn-area">
+                <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+              </div>
+            <% else %>
+            <br>
+            <% end %>
         </div>
   <% end %>
 </div>
