--- a/chatapp/app/views/room/search_form.html.erb
+++ b/chatapp/app/views/room/search_form.html.erb
@@ -10,7 +10,6 @@
 </div>
 <div class="rooms">
   <% @room.each do |room| %>
-    <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) #not joined rooms %>
         <div class="room">
             <div class="room-bg-image">
                 <% if room.image.length > 0 || room.image != nil %>
@@ -33,40 +32,17 @@
                 </div>
                 <div class="room-create-time"><%= date_format(room.created_at)%></div>
               </div>
-              <div class="title"><%= room.name %></div>
+                <div class="title"><%= room.name %></div>
             </div>
-            <div class="join-btn-area">
-              <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
-            </div>
-        </div>
-
-    <% else #joined rooms %>
-        <div class="room">
-            <div class="room-bg-image">
-                <% if room.image.length > 0 || room.image != nil %>
-                  <img src = "<%= room.image %>">
-                <% else %>
-                  <img src = "/room_image/default.png">
-                <% end %>
-            </div>
-            <div class="room-image">
-              <% if room.image.length > 0 || room.image != nil %>
-                <img src = "<%= room.image %>" class="room-image">
-              <% else %>
-                <img src = "/room_image/default.png" class="room-image">
-              <% end %>
-            </div>
-            <div class="room-titles">
-              <div class="room-category-time">
-                <div class="room-category">
-                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
-                </div>
-                <div class="room-create-time"><%= date_format(room.created_at)%></div>
+            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+              <div class="join-btn-area">
+                <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
               </div>
-              <div class="title"><%= room.name %></div>
-            </div>
+            <% else %>
+              <%= link_to room_page_path(room.id), class: "spread-link" do %><% end %>
+            <br>
+            <% end %>
         </div>
-    <% end %>
   <% end %>
 </div>
 
