--- a/chatapp/app/views/category/index.html.erb
+++ b/chatapp/app/views/category/index.html.erb
@@ -1,40 +1,40 @@
+<div class="content-column">
+  <div class="title">カテゴリ別ルーム一覧（<%= @category %>）</div>
+</div>
 <div class="rooms">
-  <div class="content-column">
-    <div class="title">カテゴリ別ルーム一覧（<%= @category %>）</div>
-  </div>
   <% @rooms.each do |room| %>
-    <div class="room"> 
-      <div class="room-image">
-        <% if room.image.length > 0 || room.image != nil %>
-          <img src = "<%= room.image %>" class="room-image">
-        <% else %>
-          <img src = "/room_image/default.png" class="room-image">
-        <% end %>
-      </div>
-      <%= room.name %>
-      <%= date_format(room.created_at)%>
-      <%= link_to "参加", room_join_path(room.id), "data-turbo": false %>
-    </div>
-  <% end %>
-  <% if @rooms_joined.length > 0 || @room_joined != nil %>
-    <div class="content-column">
-    <div class="title">参加中のルーム</div>
-    </div>
-  <% end %>
-  <% @rooms_joined.each do |room| %>
-    <%= link_to room_page_path(room.id) do %>
-      <div class="room"> 
-        <div class="room-image">
-          <% if room.image.length > 0 || room.image != nil %>
-            <img src = "<%= room.image %>" class="room-image">
-          <% else %>
-            <img src = "/room_image/default.png" class="room-image">
-          <% end %>
+        <div class="room">
+            <div class="room-bg-image">
+                <% if room.image.length > 0 || room.image != nil %>
+                  <img src = "<%= room.image %>">
+                <% else %>
+                  <img src = "/room_image/default.png">
+                <% end %>
+            </div>
+            <div class="room-image">
+              <% if room.image.length > 0 || room.image != nil %>
+                <img src = "<%= room.image %>" class="room-image">
+              <% else %>
+                <img src = "/room_image/default.png" class="room-image">
+              <% end %>
+            </div>
+            <div class="room-titles">
+              <div class="room-category-time">
+                <div class="room-category">
+                  <%= link_to "##{room.category}", category_path(CGI.escape(room.category)) %>
+                </div>
+                <div class="room-create-time"><%= date_format(room.created_at)%></div>
+              </div>
+                <div class="title"><%= room.name %></div>
+            </div>
+            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+              <div class="join-btn-area">
+                <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
+              </div>
+            <% else %>
+              <%= link_to room_page_path(room.id), class: "spread-link" do %><% end %>
+            <br>
+            <% end %>
         </div>
-        <%= room.name %>
-        <%= date_format(room.created_at) %>
-      </div>
-    <% end %>
   <% end %>
 </div>
-<%= link_to "戻る", request.referer %>
