--- a/chatapp/app/assets/stylesheets/room.scss
+++ b/chatapp/app/assets/stylesheets/room.scss
@@ -95,7 +95,7 @@
     
     .room-bg-image {
       width: 100%;
-      height: 120px;
+      height: 15vh;
       background-color: #d1d1d1;
       img {
         width: 100%;
@@ -107,7 +107,7 @@
     }
     .room-titles {
       padding: 10px;
-      margin-top: 30px;      
+      margin-top: 30px; 
       .room-category-time {
         display: flex;
         align-items: center;
@@ -168,7 +168,7 @@
     
     .room-image {
       position: absolute;
-      top: 18%;
+      top: 16%;
       left: 24%;
       z-index: 1;
       width: 35%;
